# SPM

./: .gitignore  CMakeLists.txt  README.md
g.antonioli3/Code/Assignment1/: a.out  fibo1.cpp  fibo2.cpp
g.antonioli3/Code/Assignment3/: a.out  ordering_odd_even.cpp  test.cpp
g.antonioli3/Code/Assignment4/: README.md  main.cpp
g.antonioli3/Code/spm/: fibo1.cpp  fibo2.cpp
g.antonioli3/Project/: Makefile  Node.cpp  fftest.cpp  main.cpp
g.antonioli3/Project/MDF/: Graph.h  Node.h  shared_queue.cpp  shared_queue.h
g.antonioli3/Project/Sequential/: Graph.cpp  Graph.h  Node.cpp  Node.h  main.cpp  shared_queue.cpp  shared_queue.h  test.cpp
